--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="/css/style.css" type="text/css" media="all">
 	<title>Starladder.com – Game Revolution</title>
 	<script src="/js/gpt.js" type="text/javascript" async=""></script>
-	<script type="text/javascript" src="Starladder-GameRevolution_files/wp-emoji-release.js"></script>
+	<!-- <script type="text/javascript" src="Starladder-GameRevolution_files/wp-emoji-release.js"></script> -->
 	<style type="text/css">
 	img.wp-smiley,img.emoji {
 		display: inline !important;
@@ -139,7 +139,7 @@
 		</div>
 	</div>
 	<!-- End header -->
-	
+
 	<div id="content" class="site-content">
 	<div id="primary" class="content-area">
 		<main id="main" class="site-main" role="main">
@@ -887,6 +887,7 @@
 	</main><!-- #main -->
 	</div><!-- #primary -->
 	</div><!-- #content -->
+
 	<!-- Start Footer -->
 	<footer class="footer">
 	<div class="container">
